<resources>
    <string name="app_name">Gettin Start With Mockito - Testings</string>

    <string name="label_distance">Distância</string>
    <string name="label_price">Preço</string>
    <string name="label_autonomia">Autonomia</string>
    <string name="btn_calculate">Calcular</string>
    <string name="label_validation_fields">Por favor, informe valores válidos</string>
    <string name="title_total_km">Total de Quilômetros</string>
    <string name="title_price_litro">Preço por litro</string>
    <string name="kms_por_litro">Kms por litro</string>
    <string name="title_total_price">Seu gasto total será de:</string>
</resources>